--- a/home.html
+++ b/home.html
@@ -681,7 +681,7 @@
     </button>
 
     <script>
-        const API_KEY = '133b4971e5e64c16bc389db2a9445596';
+        const API_KEY ='YOUR_API_KEY';
         let currentCategory = 'technology';
         let bookmarkedArticles = [];
 
